Dynamic-access coverage for com.alibaba.fastjson.serializer.AnnotationSerializer (129/173)